# mathlg

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  requirements.txt
.opencode/agents/: backend.md  brand-strategist.md  ceo.md  copywriter.md  cto.md  customer-success.md  data-engineer.md  devops.md  docs-writer.md  frontend.md  growth.md  ml-engineer.md  mobile.md  performance-marketing.md  pm.md  qa.md  security.md  seo.md  social-media.md  ui-designer.md  ux-designer.md
.opencode/commands/: app-launch.md  aso-sprint.md  campaign.md  design-sprint.md  hotfix.md  mobile-feature.md  product-launch.md
docs/: adr-001-stack-architecture.md  project.md
mathlg/: __init__.py  __main__.py
mathlg/cli/: __init__.py  config.py  repl.py  runner.py
mathlg/export/: __init__.py  base.py  csv_exporter.py  json_exporter.py
mathlg/i18n/: __init__.py  base.py  en.py  manager.py  pt_br.py
mathlg/interpreter/: __init__.py  builtins.py  environment.py  evaluator.py
mathlg/lang/: __init__.py  ast_nodes.py  grammar.py  parser.py  tokenizer.py  (+1 more)
tutorials/: 01-operacoes-basicas.md  01-operacoes-basicas.mlg  02-operacoes-avancadas.md  02-operacoes-avancadas.mlg  03-variaveis.md  03-variaveis.mlg  04-funcoes.md  04-funcoes.mlg  05-controle-de-fluxo.md  05-controle-de-fluxo.mlg  06-comparacoes-booleanos.md  06-comparacoes-booleanos.mlg  07-exportacao.md  07-exportacao.mlg  08-ingles.md  08-ingles.mlg  09-exemplos-completos.md  09-exemplos-completos.mlg  10-tipos.md  10-tipos.mlg  11-recursao.md  11-recursao.mlg  12-casos-extremos.md  12-casos-extremos.mlg
(+20 files in other folders)
